# project1

./: .coverage  .env  .env.example  ARCHITECTURE.md  CLAUDE.md  ENTERPRISE_BEST_PRACTICES.md  Makefile  README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
tests/: __init__.py  test_app.py  test_math_functions.py
